add polybox link

--- a/metagenomics.ipynb
+++ b/metagenomics.ipynb
@@ -114,6 +114,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0896e942-b7ac-48bc-8ce6-d06be591bf8f",
+   "metadata": {},
+   "source": [
+    "##### Download files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9756b7f0-e8a8-4110-8a14-785d6b04009f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-11-23 10:37:42 URL:https://polybox.ethz.ch/index.php/s/9IoT5okOckQUCl5/download [47323823] -> \"CE/picrust2_results/metagenomics.zip\" [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "! wget -nv -O $data_dir/picrust2_results/metagenomics.zip 'https://polybox.ethz.ch/index.php/s/9IoT5okOckQUCl5/download'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a77a5617-fd30-4328-a00e-12b4ac3316be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "replace CE/metagenomics/ec_metagenome.qza? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
+     ]
+    }
+   ],
+   "source": [
+    "! unzip -q $data_dir/picrust2_results/metagenomics.zip -d $data_dir\n",
+    "! rm $data_dir/picrust2_results/metagenomics.zip"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "ab22e55e-14af-4310-9f49-c3269910434f",
