test run download link
laura successfully linked large artifact as polybox link.

--- a/metagenomics.ipynb
+++ b/metagenomics.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9756b7f0-e8a8-4110-8a14-785d6b04009f",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-11-23 10:37:42 URL:https://polybox.ethz.ch/index.php/s/9IoT5okOckQUCl5/download [47323823] -> \"CE/picrust2_results/metagenomics.zip\" [1]\n"
+      "2022-11-23 10:40:45 URL:https://polybox.ethz.ch/index.php/s/9IoT5okOckQUCl5/download [47323823] -> \"CE/picrust2_results/metagenomics.zip\" [1]\n"
      ]
     }
    ],
@@ -141,21 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a77a5617-fd30-4328-a00e-12b4ac3316be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "replace CE/metagenomics/ec_metagenome.qza? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! unzip -q $data_dir/picrust2_results/metagenomics.zip -d $data_dir\n",
     "! rm $data_dir/picrust2_results/metagenomics.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bedeb98b-e57f-4555-9efd-5107554e3e69",
+   "metadata": {},
+   "source": [
+    "#### visualize metadata"
    ]
   },
   {
