--- a/metagenomics.ipynb
+++ b/metagenomics.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "5dada12d-b773-49c3-8c1b-f539ae9982c9",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,17 @@
    "id": "bedeb98b-e57f-4555-9efd-5107554e3e69",
    "metadata": {},
    "source": [
-    "#### visualize metadata"
+    "##### visualize metadata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a4e92e90-f59a-480b-91ca-ca2a27a953f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata = pd.read_csv(f'{data_dir}/food-metadata.tsv', sep='\\t', header=0, index_col=0)"
    ]
   },
   {
@@ -234,47 +244,332 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6d20c5b0-aae0-4e50-b560-237404dc9907",
+   "cell_type": "markdown",
+   "id": "3fe0f50b-999b-452a-a20f-8e42158fb0f8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3039516243.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [2]\u001b[0;36m\u001b[0m\n\u001b[0;31m    change 1,2,3 blibli blabla\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f891bf5d-45e8-449f-99f2-358d09237db8",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "change 1,2,3 blibli blabla"
+    "#han mal no nüt gfiltered (nur copy pasted)\n",
+    "#! qiime feature-table filter-samples \\\n",
+    "    --i-table $data_dir/picrust2_results/ko_metagenome.qza \\\n",
+    "    --m-metadata-file $data_dir/metadata.tsv \\\n",
+    "    --p-where \"[mom_or_child]='C'\" \\\n",
+    "    --o-filtered-table $data_dir/picrust2_results/ko_metagenome_child.qza\n",
+    "\n",
+    "#! qiime feature-table filter-samples \\\n",
+    "    --i-table $data_dir/picrust2_results/ec_metagenome.qza \\\n",
+    "    --m-metadata-file $data_dir/metadata.tsv \\\n",
+    "    --p-where \"[mom_or_child]='C'\" \\\n",
+    "    --o-filtered-table $data_dir/picrust2_results/ec_metagenome_child.qza\n",
+    "#! qiime feature-table filter-samples \\\n",
+    "    --i-table $data_dir/picrust2_results/pathway_abundance.qza \\\n",
+    "    --m-metadata-file $data_dir/metadata.tsv \\\n",
+    "    --p-where \"[mom_or_child]='C'\" \\\n",
+    "    --o-filtered-table $data_dir/picrust2_results/pathway_abundance_child.qza"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "id": "6d20c5b0-aae0-4e50-b560-237404dc9907",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#let's look at unfiltered picrust2_results\n",
+    "\n",
+    "ko = q2.Artifact.load(f'{data_dir}/picrust2_results/ko_metagenome.qza').view(pd.DataFrame)\n",
+    "ec = q2.Artifact.load(f'{data_dir}/picrust2_results/ec_metagenome.qza').view(pd.DataFrame)\n",
+    "pa = q2.Artifact.load(f'{data_dir}/picrust2_results/pathway_abundance.qza').view(pd.DataFrame)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3c3ee55-2540-4c47-a31a-1ce238441b96",
+   "metadata": {},
+   "source": [
+    "let's have a look at these tables. They don't contain any information about ASVs anymore but about different levels of the functional profiles:\n",
+    "\n",
+    "1. `ko` table: columns represent KEGG orthologs, as indicated by their names (e.g., **K**19777)\n",
+    "2. `ec` table: columns represent enzymes, as indicated by the Enzyme Commission numbers (e.g., **EC**:1.1.1.108)\n",
+    "3. `pa` table: columns represent entire pathways using the MetaCyc classification (e.g., ANAGLYCOLYSIS-PWY)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e98b0c7-59d3-4aac-96f6-8933c9ca9d13",
+   "metadata": {},
+   "source": [
+    "let's merge feature table with the pasteurization column from the metadata."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4f4dba53-41d5-4dcb-8bf9-8f1f6aa18e65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ko_meta = ko.merge(metadata[['pasteurized']], left_index=True, right_index=True)\n",
+    "ec_meta = ec.merge(metadata[['pasteurized']], left_index=True, right_index=True)\n",
+    "pa_meta = pa.merge(metadata[['pasteurized']], left_index=True, right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ca85779f-c916-405f-bc4a-0cbe48cdfd86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ko_meta_avg = ko_meta.groupby('pasteurized').mean()\n",
+    "ec_meta_avg = ec_meta.groupby('pasteurized').mean()\n",
+    "pa_meta_avg = pa_meta.groupby('pasteurized').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "061c31da-5f70-469e-a169-617795ef393b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>K00001</th>\n",
+       "      <th>K00002</th>\n",
+       "      <th>K00003</th>\n",
+       "      <th>K00004</th>\n",
+       "      <th>K00005</th>\n",
+       "      <th>K00007</th>\n",
+       "      <th>K00008</th>\n",
+       "      <th>K00009</th>\n",
+       "      <th>K00010</th>\n",
+       "      <th>K00011</th>\n",
+       "      <th>...</th>\n",
+       "      <th>K19776</th>\n",
+       "      <th>K19777</th>\n",
+       "      <th>K19778</th>\n",
+       "      <th>K19779</th>\n",
+       "      <th>K19780</th>\n",
+       "      <th>K19784</th>\n",
+       "      <th>K19785</th>\n",
+       "      <th>K19788</th>\n",
+       "      <th>K19789</th>\n",
+       "      <th>K19791</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pasteurized</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>N</th>\n",
+       "      <td>45212.003827</td>\n",
+       "      <td>185.908689</td>\n",
+       "      <td>37531.219524</td>\n",
+       "      <td>14012.060133</td>\n",
+       "      <td>5540.705731</td>\n",
+       "      <td>39.233664</td>\n",
+       "      <td>26725.283658</td>\n",
+       "      <td>8666.802792</td>\n",
+       "      <td>4928.603070</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>...</td>\n",
+       "      <td>206.156283</td>\n",
+       "      <td>198.177837</td>\n",
+       "      <td>221.580649</td>\n",
+       "      <td>1.507643e-38</td>\n",
+       "      <td>8.650003</td>\n",
+       "      <td>3140.075768</td>\n",
+       "      <td>4.876630e-125</td>\n",
+       "      <td>9.019276e-55</td>\n",
+       "      <td>2227.031159</td>\n",
+       "      <td>0.520927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Y</th>\n",
+       "      <td>48813.259252</td>\n",
+       "      <td>322.071220</td>\n",
+       "      <td>49677.769682</td>\n",
+       "      <td>21221.676186</td>\n",
+       "      <td>10779.027223</td>\n",
+       "      <td>237.477202</td>\n",
+       "      <td>36895.098419</td>\n",
+       "      <td>16783.979802</td>\n",
+       "      <td>18479.601949</td>\n",
+       "      <td>0.000676</td>\n",
+       "      <td>...</td>\n",
+       "      <td>431.210745</td>\n",
+       "      <td>204.207785</td>\n",
+       "      <td>236.545723</td>\n",
+       "      <td>8.246362e-38</td>\n",
+       "      <td>12.900228</td>\n",
+       "      <td>10312.811629</td>\n",
+       "      <td>6.062880e-125</td>\n",
+       "      <td>1.121323e-54</td>\n",
+       "      <td>6174.098661</td>\n",
+       "      <td>10.168494</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 10110 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   K00001      K00002        K00003        K00004  \\\n",
+       "pasteurized                                                         \n",
+       "N            45212.003827  185.908689  37531.219524  14012.060133   \n",
+       "Y            48813.259252  322.071220  49677.769682  21221.676186   \n",
+       "\n",
+       "                   K00005      K00007        K00008        K00009  \\\n",
+       "pasteurized                                                         \n",
+       "N             5540.705731   39.233664  26725.283658   8666.802792   \n",
+       "Y            10779.027223  237.477202  36895.098419  16783.979802   \n",
+       "\n",
+       "                   K00010    K00011  ...      K19776      K19777      K19778  \\\n",
+       "pasteurized                          ...                                       \n",
+       "N             4928.603070  0.000004  ...  206.156283  198.177837  221.580649   \n",
+       "Y            18479.601949  0.000676  ...  431.210745  204.207785  236.545723   \n",
+       "\n",
+       "                   K19779     K19780        K19784         K19785  \\\n",
+       "pasteurized                                                         \n",
+       "N            1.507643e-38   8.650003   3140.075768  4.876630e-125   \n",
+       "Y            8.246362e-38  12.900228  10312.811629  6.062880e-125   \n",
+       "\n",
+       "                   K19788       K19789     K19791  \n",
+       "pasteurized                                        \n",
+       "N            9.019276e-55  2227.031159   0.520927  \n",
+       "Y            1.121323e-54  6174.098661  10.168494  \n",
+       "\n",
+       "[2 rows x 10110 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ko_meta_avg.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "337d2a24-f646-4b83-b93d-a0a0c7796be8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2317514261.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [4]\u001b[0;36m\u001b[0m\n\u001b[0;31m    nomal test gopf\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving 101 most abundant features...\n",
+      "Saving 84 most abundant features...\n",
+      "Saving 5 most abundant features...\n"
      ]
     }
    ],
    "source": [
-    "nomal test gopf"
+    "# find top x% of the most abundant KOs, ECs and pathways in each sample type\n",
+    "\n",
+    "def find_most_abundant(df: pd.DataFrame, frac):\n",
+    "    if 0 < frac < 1:\n",
+    "        frac = int(frac * len(df.columns))\n",
+    "    print(f'Saving {frac} most abundant features...')\n",
+    "    most_abundant = {\n",
+    "        smp: df.loc[smp, :].sort_values(ascending=False)[:frac]\n",
+    "        for smp in df.index\n",
+    "    }\n",
+    "    return most_abundant\n",
+    "\n",
+    "ko_most_abundant = find_most_abundant(ko_meta_avg, 0.01)\n",
+    "ec_most_abundant = find_most_abundant(ec_meta_avg, 0.03)\n",
+    "pa_most_abundant = find_most_abundant(pa_meta_avg, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "52107923-d5d4-4e7f-872c-951d33737d07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 most abundant KOs in the treatment group are: ['K01990', 'K02015', 'K01992', 'K00059', 'K03088', 'K02529', 'K02016', 'K02013', 'K00626', 'K07090']\n",
+      "10 most abundant KOs in the non-treatment group are: ['K01990', 'K01992', 'K02015', 'K03088', 'K00059', 'K02529', 'K00626', 'K02016', 'K02013', 'K00666']\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'10 most abundant KOs in the treatment group are: {ko_most_abundant[\"Y\"].index[:10].tolist()}\\n'\n",
+    "      f'10 most abundant KOs in the non-treatment group are: {ko_most_abundant[\"N\"].index[:10].tolist()}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5bd9bab4-7c42-4a9e-bc4b-ffae22becfa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for smp in ko_most_abundant.keys():\n",
+    "    fetch_ipath(ko_most_abundant[smp].index.tolist(), f'{data_dir}/kos_{smp}.svg')\n",
+    "    fetch_ipath(ec_most_abundant[smp].index.str.replace(':', '').tolist(), f'{data_dir}/ecs_{smp}.svg')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52107923-d5d4-4e7f-872c-951d33737d07",
+   "id": "5f752113-4d3d-4720-85c0-c78d2d8b6547",
    "metadata": {},
    "outputs": [],
    "source": []
