--- a/metagenomics.ipynb
+++ b/metagenomics.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "5dada12d-b773-49c3-8c1b-f539ae9982c9",
    "metadata": {},
    "outputs": [],
@@ -567,9 +567,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b88867e9-72bf-4393-9833-75b1927e68ca",
+   "metadata": {},
+   "source": [
+    "Don't see anything too interesting...\n",
+    "let's continue with enriched pathways"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7890798b-0243-4036-9cb9-a1e2e08451db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usage: \u001b[94mqiime composition add-pseudocount\u001b[0m [OPTIONS]\n",
+      "\n",
+      "  Increment all counts in table by pseudocount.\n",
+      "\n",
+      "\u001b[1mInputs\u001b[0m:\n",
+      "  \u001b[94m\u001b[4m--i-table\u001b[0m ARTIFACT \u001b[32mFeatureTable[Frequency]\u001b[0m\n",
+      "                       The feature table to which pseudocounts should be\n",
+      "                       added.                                       \u001b[35m[required]\u001b[0m\n",
+      "\u001b[1mParameters\u001b[0m:\n",
+      "  \u001b[94m--p-pseudocount\u001b[0m INTEGER\n",
+      "                       The value to add to all counts in the feature table.\n",
+      "                                                                  \u001b[35m[default: 1]\u001b[0m\n",
+      "\u001b[1mOutputs\u001b[0m:\n",
+      "  \u001b[94m\u001b[4m--o-composition-table\u001b[0m ARTIFACT \u001b[32mFeatureTable[Composition]\u001b[0m\n",
+      "                       The resulting feature table.                 \u001b[35m[required]\u001b[0m\n",
+      "\u001b[1mMiscellaneous\u001b[0m:\n",
+      "  \u001b[94m--output-dir\u001b[0m PATH    Output unspecified results to a directory\n",
+      "  \u001b[94m--verbose\u001b[0m / \u001b[94m--quiet\u001b[0m  Display verbose output to stdout and/or stderr during\n",
+      "                       execution of this action. Or silence output if\n",
+      "                       execution is successful (silence is golden).\n",
+      "  \u001b[94m--example-data\u001b[0m PATH  Write example data and exit.\n",
+      "  \u001b[94m--citations\u001b[0m          Show citations and exit.\n",
+      "  \u001b[94m--help\u001b[0m               Show this message and exit.\n",
+      "\n",
+      "\u001b[33m                  There were some problems with the command:                  \u001b[0m\n",
+      "\u001b[31m\u001b[1m (1/2) Invalid value for '--i-table': '/metagenomics/pathway_abundance.qza' is\n",
+      "  not a valid filepath\u001b[0m\n",
+      "\u001b[31m\u001b[1m (2/2) Invalid value for '--o-composition-table': Directory '/metagenomics'\n",
+      "  does not exist, cannot save 'pathway_abundance_differences.qza' into it.\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime composition add-pseudocount \\\n",
+    "    --i-table $data_dir/metagenomics/pathway_abundance.qza \\\n",
+    "    --o-composition-table $data_dir/metagenomics/pathway_abundance_differences.qza"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f752113-4d3d-4720-85c0-c78d2d8b6547",
+   "id": "46d13c2b-a013-406f-b2a8-dab13fc57bb7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed20694f-7b68-4e11-9ae4-e2162e840f46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3679772-8208-4fc7-ac68-21182d3615fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e066c46-f978-4686-815f-6c0da8a0d4ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10e5cacf-f6f7-4cab-b67d-422dd4b289e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da67b397-c6c3-460c-897a-417c79deb560",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59a1a3cb-19f6-4dc9-8378-ecedb8ac5295",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60054c26-4787-44f5-940e-de8ffb892b52",
    "metadata": {},
    "outputs": [],
    "source": []
